// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown matches snapshot 1`] = `
.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="dropdown-transparent c0 dot-menu-dropdown"
>
  <div
    className="dropdown-focus-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      aria-label="Actions"
      className="plain-button dot-menu-toggle dropdown-toggle "
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon "
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <div
      className="dropdown-menu dot-menu-left-align"
    >
      <menu
        className="dropdown-list dot-menu-dropdown-list"
      >
        <li>
          <button
            onClick={[Function]}
            onMouseEnter={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete
          </button>
        </li>
        <li>
          <a
            href="/wooo"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="button"
            tabIndex={0}
          >
            Edit
          </a>
        </li>
      </menu>
    </div>
  </div>
  <button
    aria-label="Actions"
    className="plain-button dot-menu-toggle dropdown-toggle dropdown-toggle-second"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="dot-menu-icon "
        viewBox="0 0 192 512"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Dropdown matches snapshot on right align 1`] = `
.c0 {
  overflow: visible;
  position: relative;
}

<div
  className="dropdown-transparent c0 dot-menu-dropdown"
>
  <div
    className="dropdown-focus-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <button
      aria-label="Actions"
      className="plain-button dot-menu-toggle dropdown-toggle "
      tabIndex={0}
    >
      <div
        tabIndex={-1}
      >
        <svg
          aria-hidden="true"
          className="dot-menu-icon "
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <div
      className="dropdown-menu dot-menu-right-align"
    >
      <menu
        className="dropdown-list dot-menu-dropdown-list dot-menu-right-align"
      >
        <li>
          <button
            onClick={[Function]}
            onMouseEnter={[Function]}
            tabIndex={0}
            type="button"
          >
            Delete
          </button>
        </li>
        <li>
          <a
            href="/wooo"
            onClick={[Function]}
            onMouseEnter={[Function]}
            role="button"
            tabIndex={0}
          >
            Edit
          </a>
        </li>
      </menu>
    </div>
  </div>
  <button
    aria-label="Actions"
    className="plain-button dot-menu-toggle dropdown-toggle dropdown-toggle-second"
    tabIndex={0}
  >
    <div
      tabIndex={-1}
    >
      <svg
        aria-hidden="true"
        className="dot-menu-icon "
        viewBox="0 0 192 512"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </button>
</div>
`;
